[gd_scene load_steps=4 format=3 uid="uid://bm67sj0tkk1do"]

[ext_resource type="Script" path="res://scripts/user_interface/uiFastTravel.gd" id="1_vesp7"]
[ext_resource type="StyleBox" uid="uid://dp2nq8lcxrsfc" path="res://design/PanelNoTop.tres" id="2_0i7nv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xuni1"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_color = Color(1, 1, 1, 1)

[node name="FastTravel" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_vesp7")

[node name="FastTravelAreas" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -184.0
offset_top = -148.0
offset_right = 184.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xuni1")

[node name="MarginContainer" type="MarginContainer" parent="FastTravelAreas"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="ScrollContainer" type="ScrollContainer" parent="FastTravelAreas/MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="FastTravelAreas/MarginContainer/ScrollContainer"]
custom_minimum_size = Vector2(248, 0)
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -184.0
offset_top = 36.0
offset_right = 184.0
offset_bottom = 132.0
theme_override_styles/panel = ExtResource("2_0i7nv")

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer2"]
layout_mode = 2
bbcode_enabled = true
